--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sch0ol Zoom Meating Schedule | @Saraswati Vidya Mandir, Barwat Sena, Bettiah</title>
+    <title>School Zoom Meating Schedule | @Saraswati Vidya Mandir, Barwat Sena, Bettiah</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="res/root.jpg" type="image/x-icon">
     <script src="js/index.js"></script>
@@ -44,7 +44,7 @@
                     <td>
 
                         <br>
-                        <i class="fa fa-star"></i>Teacher Name: Basant Sriwastaw
+                        <i class="fa fa-star"></i>Teacher Name: Basant Sriwastawa
                         <br>
                         <i class="fa fa-star"></i>Zoom Link : <a href="" target="_blank"> Click Here.. </a>
                         <br>
