--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="res/root.jpg" type="image/x-icon">
     <script src="js/index.js"></script>
-    <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -250,6 +250,8 @@
     </div>
 
     <div id="sunday"></div>
+    <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
