--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         } else if (day == 6) {
             f.innerHTML = text;
         } else {
-            g.innerHTML = "Today  is Sunday"
+            alert("Today Is Sunday")
         }
     </script>
 
