--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                         <br>
                         <i class="fa fa-star"></i>Teacher Name: Pawan Singh
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link :<a href="" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/5406986585?pwd=YlptbmszeW4rK1VBUHlwR2tHR2tLQT09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id:
+                        <i class="fa fa-star"></i>Zoom Id: 540 698 6585
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password:
+                        <i class="fa fa-star"></i>Zoom Password: 123456
 
                     </td>
 
@@ -78,7 +78,7 @@
                     <td>
 
                         <br>
-                        <i class="fa fa-star"></i>Teacher Name: Paradip Kumar Verma
+                        <i class="fa fa-star"></i>Teacher Name: Pradeep Verma
                         <br>
                         <i class="fa fa-star"></i>Zoom Link :
                         <a href="https://us04web.zoom.us/j/2861519666?pwd=ZjJxSmpjSkduRWinhUcHVZYWc2ZnVVUT09" target="_blank"> Click Here.. </a>
@@ -116,23 +116,23 @@
                         <br>
                         <i class="fa fa-star"></i>Teacher Name: Bharat Kumar Rai
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link :<a href="" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/4750727984?pwd=V01Ybm9DNnZ2dGxhZmduRUhraHhEQT09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id:
+                        <i class="fa fa-star"></i>Zoom Id: 475 072 7984
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password:
+                        <i class="fa fa-star"></i>Zoom Password: Bharat12
 
                     </td>
                     <td>
 
                         <br>
-                        <i class="fa fa-star"></i>Teacher Name: Parawin Kumar
+                        <i class="fa fa-star"></i>Teacher Name: Pravin Kumar
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link : <a href="" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link : <a href="https://us04web.zoom.us/j/78463326216?pwd=elhSTkZLbk1KYWZ2NEtnNzhkaHVSQT09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id:
+                        <i class="fa fa-star"></i>Zoom Id: 784 6332 6216
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password:
+                        <i class="fa fa-star"></i>Zoom Password: 1234
 
                     </td>
 
@@ -181,13 +181,13 @@
                     <td>
 
                         <br>
-                        <i class="fa fa-star"></i>Teacher Name: Yogeshwar Shriwastwa
+                        <i class="fa fa-star"></i>Teacher Name: Yogeshwar Shrivastava
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link :<a href="" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/4747830681?pwd=Z0kzSzBNd0Y3SEo1K0V0VjZZaVhwQT09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id:
+                        <i class="fa fa-star"></i>Zoom Id: 474 783 0681
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password:
+                        <i class="fa fa-star"></i>Zoom Password: 092853
 
                     </td>
                     <td>
@@ -216,11 +216,11 @@
                         <br>
                         <i class="fa fa-star"></i>Teacher Name: Bimlesh Kumar Singh
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link :<a href="" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/4303439308?pwd=YXpNbndiRjVMa2pEMGtIOVVJVzlNUT09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id:
+                        <i class="fa fa-star"></i>Zoom Id: 430 343 9308
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password:
+                        <i class="fa fa-star"></i>Zoom Password: 171210
 
                     </td>
                     <td>
