--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <td>
 
                         <br>
-                        <i class="fa fa-star"></i>Teacher Name: Basant Sriwastawa
+                        <i class="fa fa-star fa-sm"></i>Teacher Name: Basant Sriwastawa
                         <br>
                         <i class="fa fa-star"></i>Zoom Link : <a href="" target="_blank"> Click Here.. </a>
                         <br>
