--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                         <br>
                         <i class="fa fa-star"></i>Teacher Name: Satyaparakash Jha
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link :<a href="" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/6155846171?pwd=aVV6R1R2M0pkYlQrbnhaQnY3cUY5UT09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id:
+                        <i class="fa fa-star"></i>Zoom Id: 615 584 6171
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password:
+                        <i class="fa fa-star"></i>Zoom Password: 337826
 
                     </td>
                     <td>
