--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Class 9th "D" zoom Meating | Saraswati Vidya Mandir Barwat Sena, Bettiah</h1>
+    <h1>Class 9th "D" "E" & "F" (Sanskrit) zoom Meating | Saraswati Vidya Mandir Barwat Sena, Bettiah</h1>
     <div class="container" id="container">
         <table class="table">
             <thead>
