--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
                         <br>
                         <i class="fa fa-star"></i>Teacher Name: Chandra Bhusan Mishra
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link :<a href="" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/9335826491?pwd=ZVFsclBXSmVQQ3lDbFgxZElCclZJdz09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id:
+                        <i class="fa fa-star"></i>Zoom Id: 933 582 6491
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password:
+                        <i class="fa fa-star"></i>Zoom Password:  123456
 
                     </td>
 
