--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <h1>Class 9th "D" "E" & "F" (Sanskrit) zoom Meating | Saraswati Vidya Mandir Barwat Sena, Bettiah</h1>
+    <p id="takename"></p>
     <div class="container" id="container">
         <table class="table">
             <thead>
@@ -252,6 +253,10 @@
     <div id="sunday"></div>
     <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
     <script>
+        let nameofuser =  prompt("What is your name" , 'Geust');
+        let takename = document.getElementById('takename');
+        let greet = `Hello ${nameofuser} ! Welcome ! We Collected All link on one page for your usase.`
+        takename.innerHTML = geeet ;
         let date = new Date();
 
         let day = date.getDay();
