--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         let nameofuser =  prompt("What is your name" , Geust);
         let takename = document.getElementById('takename');
         let greet = `Hello ${nameofuser} ! Welcome ! We Collected All link on one page for your usase.`
-        takename.innerHTML = geeet ;
+        takename.innerHTML = greet ;
         let date = new Date();
 
         let day = date.getDay();
