--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
     <script>
         let nameofuser =  prompt("What is your name" , Geust);
         let takename = document.getElementById('takename');
-        let greet = `Hello ${nameofuser} ! Welcome ! We Collected All link on one page for your usase.`
-        takename.innerHTML = greet ;
+        let greet = `Hello ${nameofuser} ! Welcome ! We Collected All link on one page for your usase.`;
+            takename.innerHTML = greet ;
         let date = new Date();
 
         let day = date.getDay();
