--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
     <div id="sunday"></div>
     <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
     <script>
-        let nameofuser =  prompt("What is your name" , Geust);
-        let takename = document.getElementById('takename');
-        let greet = `Hello ${nameofuser} ! Welcome ! We Collected All link on one page for your usase.`;
-            takename.innerHTML = greet ;
+        //let nameofuser =  prompt("What is your name" , Geust);
+        //let takename = document.getElementById('takename');
+        //let greet = `Hello ${nameofuser} ! Welcome ! We Collected All link on one page for your usase.`;
+         //   takename.innerHTML = greet ;
         let date = new Date();
 
         let day = date.getDay();
