--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <div id="sunday"></div>
     <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
     <script>
-        var person = prompt("Please enter your name", "Geust");
+        var person = prompt("Please enter your name", "Guest");
         
         let greet = `Hello ${person} ! Welcome ! We Collected All link on one page for your usase`;
         let h = document.getElementById("takename");
