--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
     <script>
         var person = prompt("Please enter your name", "Guest");
-        if(person != ""){
+        if(person != "null"){
         
         let greet = `Hello ${person} ! Welcome ! We Collected All link on one page for your usase`;
             }
