--- a/index.html
+++ b/index.html
@@ -253,10 +253,9 @@
     <div id="sunday"></div>
     <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
     <script>
+        //Greet Person
         var person = prompt("Please enter your name", "Guest");
-        if(person != "null"){        
-             let greet = `Hello ${person} ! Welcome ! We Collected All link on one page for your usase`;
-            }
+        let greet = `Hello ${person} ! Welcome ! We Collected All link on one page for your usase`;           
         let h = document.getElementById("takename");
         h.innerHTML = greet;
         //takename.innerHTML = greet;
