--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
 
 
     </div>
+*Updated 5 June At 10:06 PM
+
 
     <div id="sunday"></div>
     <script src="https://kit.fontawesome.com/c27ee983e3.js" crossorigin="anonymous"></script>
