--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                         <i class="fa fa-star"></i>Teacher Name: Pradeep Verma
                         <br>
                         <i class="fa fa-star"></i>Zoom Link :
-                        <a href="https://us04web.zoom.us/j/2861519666?pwd=ZjJxSmpjSkduRWinhUcHVZYWc2ZnVVUT09" target="_blank"> Click Here.. </a>
+                        <a href="https://us04web.zoom.us/j/2861519666?pwd=dmVFV0hQaFREOW9remVraHV6MU1ZZz09" target="_blank"> Click Here.. </a>
 
                         <br>
                         <i class="fa fa-star"></i>Zoom Id: 286 151 9666
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password: 4E1UzU
+                        <i class="fa fa-star"></i>Zoom Password: PKV1234
 
                     </td>
                     <td>
@@ -248,7 +248,7 @@
 
 
     </div>
-    <p id="upd">*Updated 6 June At 2:09 PM</p>
+    <p id="upd">*Updated 9 June At 9:29 AM</p>
     <div id="sunday"></div>
 
     <!-- Font Awesome JavaScripts -->
