--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <br>
                         <i class="fa fa-star"></i>Teacher Name: Bimlesh Kumar Singh
                         <br>
-                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/4303439308?pwd=RDJyZFBpNEhjdm9ZUkNaOFlJYjZjZz09" target="_blank"> Click Here.. </a>
+                        <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/4303439308?pwd=UDIreThDdHY5U1ZBd1lFOVB6bzZuZz09" target="_blank"> Click Here.. </a>
                         <br>
                         <i class="fa fa-star"></i>Zoom Id: 430 343 9308
                         <br>
@@ -230,9 +230,9 @@
                         <br>
                         <i class="fa fa-star"></i>Zoom Link :<a href="https://us04web.zoom.us/j/9335826491?pwd=ZVFsclBXSmVQQ3lDbFgxZElCclZJdz09" target="_blank"> Click Here.. </a>
                         <br>
-                        <i class="fa fa-star"></i>Zoom Id: 933 582 6491
+                        <i class="fa fa-star"></i>Zoom Id: 430 343 9308
                         <br>
-                        <i class="fa fa-star"></i>Zoom Password: 123456
+                        <i class="fa fa-star"></i>Zoom Password: hariom
 
                     </td>
 
