--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
 
 
     </div>
+    <!-- temp -->
+    <br><p>
+     <h2> Extra class by yogeshwar guruji </h2>
+    link : <a href ="https://us04web.zoom.us/j/4747830681?pwd=Z0kzSzBNd0Y3SEo1K0V0VjZZaVhwQT09">Click here</a>
+    id :    474 783 0681
+    password : 092853
+    
+    </p>
     <p id="upd">*Updated 13 June At 8:14 AM</p>
     <div id="sunday"></div>
 
@@ -256,6 +264,7 @@
 
     <!-- JavaScript  -->
     <script>
+        alert ("Yogeshwar Guruji Extra meeting is helding on 1 PM 13 June.  Check it out on the last of page now")
         //Greet Person        
         var person = prompt("Please enter your name", "Guest");
         let greet = `Hello ${person} ! Welcome ! We Collected All link on one page for your usase`;
