--- a/index.html
+++ b/index.html
@@ -249,13 +249,14 @@
 
     </div>
     <!-- temp -->
-    <br><p style='color:white !important ;'>
-     <h2> Extra class by yogeshwar guruji </h2>
-    <br>link : <a href ="https://us04web.zoom.us/j/4747830681?pwd=Z0kzSzBNd0Y3SEo1K0V0VjZZaVhwQT09">Click here</a>
-    <br>id :  474 783 0681
-    <br>password : 092853
+    <br>
+    <td style='color:white !important ;'>
+      <h2> Extra class by yogeshwar guruji </h2>
+      <br>link : <a href ="https://us04web.zoom.us/j/4747830681?pwd=Z0kzSzBNd0Y3SEo1K0V0VjZZaVhwQT09">Click here</a>
+      <br>id :  474 783 0681
+      <br>password : 092853
     
-    </p>
+    </td>
     <p id="upd">*Updated 13 June At 8:14 AM</p>
     <div id="sunday"></div>
 
