--- a/index.html
+++ b/index.html
@@ -249,14 +249,7 @@
 
     </div>
     <!-- temp -->
-    <br>
-    <td style='color:white !important ;'>
-      <h2> Extra class by yogeshwar guruji </h2>
-      <br>link : <a href ="https://us04web.zoom.us/j/4747830681?pwd=Z0kzSzBNd0Y3SEo1K0V0VjZZaVhwQT09">Click here</a>
-      <br>id :  474 783 0681
-      <br>password : 092853
-    
-    </td>
+   
     <p id="upd">*Updated 13 June At 8:14 AM</p>
     <div id="sunday"></div>
 
@@ -265,7 +258,7 @@
 
     <!-- JavaScript  -->
     <script>
-        alert ("Yogeshwar Guruji Extra meeting is helding on 1 PM 13 June.  Check it out on the last of page now")
+        //alert ("Yogeshwar Guruji Extra meeting is helding on 1 PM 13 June.  Check it out on the last of page now")
         //Greet Person        
         var person = prompt("Please enter your name", "Guest");
         let greet = `Hello ${person} ! Welcome ! We Collected All link on one page for your usase`;
