--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h2>Class 9th "D" "E" & "F" (Sanskrit) zoom Meating | Saraswati Vidya Mandir Barwat Sena, Bettiah</h2>
     <p id="takename"></p>
+<div class="fb-like" data-href="https://anuragkumar19.github.io/School/" data-width="20" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
     <div class="container" id="container">
         <table class="table">
             <thead>
@@ -297,6 +298,8 @@
             alert("Today Is Sunday")
         }
     </script>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0" nonce="h07Axgzg"></script>
 
 </body>
 
