--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <h2>Class 9th "D" "E" & "F" (Sanskrit) zoom Meating | Saraswati Vidya Mandir Barwat Sena, Bettiah</h2>
     <p id="takename"></p>
+    <div class="Facebook-by-AnuragKumar">
 <div class="fb-like" data-href="https://anuragkumar19.github.io/School/" data-width="20" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
+        <span> <a href="comment.html"> Comments </a> </span>
+     </div>
     <div class="container" id="container">
         <table class="table">
             <thead>
