--- a/comment.html
+++ b/comment.html
@@ -11,6 +11,13 @@
     <title> Comments and suggestions here  </title>
   </head>
   <body>
+    <!-- Image and text -->
+<nav class="navbar navbar-dark bg-primary sticky-top">
+  <a class="navbar-brand" href="index.html">
+    <img src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    ZoomClasses
+  </a>
+</nav>
     <h1 class="text-center"> Comments and suggestions here.... </h1>
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
