--- a/comment.html
+++ b/comment.html
@@ -18,6 +18,9 @@
     ZoomClasses
   </a>
 </nav>
+    <div class="alert alert-success" role="alert">
+  Facebook like,share and Comment added—check it out!
+</div>
     <h1 class="text-center"> Comments and suggestions here.... </h1>
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
