--- a/index.html
+++ b/index.html
@@ -268,8 +268,26 @@
     <script>
         //alert ("Yogeshwar Guruji Extra meeting is helding on 1 PM 13 June.  Check it out on the last of page now")
         //Greet Person        
-        var person = prompt("Please enter your name", "Guest");
-        let greet = `Hello ${person} ! Welcome ! We Collected All link on one page for your usase`;
+        //var person = prompt("Please enter your name", "Guest");
+        alert("Please Enter Your Name Last Time.......")
+
+let name = localStorage.name;
+console.log(name)
+
+if (name == "Guest") {
+  name = prompt("Name", 'Guest')
+  localStorage.name = name;
+  console.log(name)
+} else if (name == undefined) {
+  name = prompt("Name", 'Guest')
+  localStorage.name = name;
+  console.log(name)
+} else if (name == "null") {
+  name = prompt("Name", 'Guest')
+  localStorage.name = name;
+  console.log(name)
+}
+        let greet = `Hello ${name} ! Welcome ! We Collected All link on one page for your usase`;
         let h = document.getElementById("takename");
         h.innerText = greet;
 
