--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="Facebook-by-AnuragKumar">
 <div class="fb-like" data-href="https://anuragkumar19.github.io/School/" data-width="20" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
         <span> <a href="comment.html"> Comments </a> </span>
+        <span> <a href="pa.html"> P.A => 1 </a> </span>
      </div>
     <div class="container" id="container">
         <table class="table">
