--- a/pa.html
+++ b/pa.html
@@ -22,7 +22,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
   <h1> Best of Luck <i style="color:#f5be47;" class="fa fa-thumbs-up fa-10x"></i></h1>
-<img src="pa.jpg" alt="Opps! Photo Not Uploaded Yet">
+<img src="FB_IMG_15936600945125395.jpg" alt="Opps! Photo Not Uploaded Yet">
 
   </div>
 </div>
