--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <div class="container my-3" id="container">
-        <h3 class="text-center">Class 9th <span class="text-primary">"D" "E" & "F" (Sanskrit)</span> Zoom Meating</h3>
+        <h3 class="text-center">Class 9th <span class="text-primary">"D" "E" & "F" (Sanskrit)</span> Zoom Meeting</h3>
         <p id="takename" class="text-center my-2"></p>
         <ul class="nav nav-pills d-flex justify-content-center align-items-center my-3">
             <li class="nav-item mr-2">
